tests/miz/pass/types/pass_type_elaboration_reserved_variable_type_assertion_001.miz
reserve x for set;
theorem ReservedVariableTypeAssertionPayloadBoundary: x is set;
