tests/miz/fail/parser/fail_parser_formula_missing_st_001.miz
theorem MissingSt: ex x st;
